1.2.1 201X-XX-XX Hiroshi Sendai

Summary
- Add SampleFilter component.  Configuration file is conf/filter.xml.

1.2.0 2012-06-29 Hiroshi Sendai

Summary

- API has not changed from 1.1.1.
- Support Scientific Linux 6.x.
  - Use mod_wsgi instead of mod_python.  URL to daq.py has been changed to
    http://localhost/daqmw/scripts/daq.py on Scientific Linux 6.x.
    If you access daq.py directly, you have to update the URL.
    The URL to daq.py on Scientific Linux 5.x has not been changed.
    WebUI operatorPanel's URL has not been changed
    (http://localhost/daqmw/operatorPanel/operatorPanel0.html).
  - Xerces 3.x support.
- Add daqcom utility to communicate with httpd server in command line.
- Add simple emulator (formally distributed as emulator-GEN_GAUSS).
  The executable binary is /usr/bin/daqmw-emulator.  Source code of
  this emulator is /usr/share/daqmw/daqmw-emulator.
- Add conditionPanel as sample GUI for updating condition variables
  (contributed from Nakatani san).  The executable binary is
  /usr/bin/conditionPanel.py.  This program requires wxPython.
- Various bug fixes.
  - Fix a bug a floating number in condition.xml was recognized as an inteter.
  - Fix one more write_data() in SampleLogger/FileUtils.
  - Fix a compile error on Sock library when using gcc 4.7.
  - Fix a run.py warning message when running on python 2.7.x.
  - Fix a buffer overflow bug in DaqOperatorComp event_byte_size.
  - Fix return value of writeAll() when EPIPE error occured.
  - Fix a bug that firefox sends SYN packet every time we click the buttons.
  - Fix a bug that progname was not defined in run.py.

Details

BUG FIX: condition.xml may have floating numbers.  The values end with
         ".0" were recognized as integer.
BUG FIX: SampleLogger/FileUtils write_data() wrote one more data chunk
         if filesize equal to the specified max file size by write_data().
FEATURE: Add simple emlulator (formally distributed as emulator-GEN_GAUSS).