@@ -1,7 +1,22 @@
-1.2.0 201X-XX-XX Hiroshi Sendai
+1.2.1 201X-XX-XX Hiroshi Sendai
 
+サマリー
 - SampleFilterコンポーネントを追加した。コンフィギュレーションファイルは
   conf/filter.xml。
+- daq.jsの修正
+
+詳細
+
+FEATURE: SampleFilterコンポーネントを追加しました。2012年8月の
+         トレーニングコースでリクエストを受けたものです。十分に
+         テストされていないので実験的な実装であると思ってください。
+BUG FIX: WebUIを使うときにはdaq.jsが定期的に各コンポーネントの
+         状態、取り扱ったバイト数などをDAQ Operatorに聞きにいきます。
+         現在は2秒間隔で聞きに行っています。負荷が大きい、コンポーネント
+         数が多いなどの理由から2秒以内に返答がない場合がありえますが
+         いままでは返答を受け取ったかどうかを考慮せずに必ず2秒おき
+         にリクエストを出していました。これを返答を受け取ってから
+         2秒後に次のリクエストを出すように修正しました。
 
 1.2.0 2012-06-29 Hiroshi Sendai
 
