@@ -2,6 +2,15 @@
 
 Summary
 - Add SampleFilter component.  Configuration file is conf/filter.xml.
+- Fix a bug on daq.js.
+
+Details:
+
+FEATURE: Add SampleFilter component (experimental).
+BUG FIX: daq.js send requests to DAQ-Opearator to get status,
+         event byte size etc.  The request was sent even if
+         the reply has not received.
+         The Web UI did not work after long run.
 
 1.2.0 2012-06-29 Hiroshi Sendai
 
